--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button onclick="reset()">Reset</button>
             <button onclick="erasure()">Erase</button>
         </div>
-        <input type="text" placeholder="Enter canvas size" value="16" onchange="newCanvasSize(this.value)">
+        <input type="text" placeholder="Enter canvas size" onchange="newCanvasSize(this.value)">
         <button>Set Size</button>
     </div>
     <script src="index.js"></script>
